// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Build test 1`] = `
<div
  onTouchStart={[Function]}
  onWheel={[Function]}
>
  <header>
    <div
      className="container"
    >
      <div
        className="flex-row"
      >
        <div
          className="header__CabinetInfo"
          onClick={[Function]}
        >
          <img
            alt="icon"
            className="mainIcon"
            draggable={false}
            onClick={null}
            src="/img/logo.svg"
            title={null}
          />
          <h3
            className="tilteApp"
          >
            Constructor
          </h3>
        </div>
        <div
          className="Navigator"
        >
          <i
            className=" about fas fa-2x fa-book"
            onClick={[Function]}
            title="Guide"
          />
          <img
            alt="icon"
            className="about"
            draggable={false}
            onClick={[Function]}
            src="/img/about_logo.svg"
            title="about"
          />
          <img
            alt="icon"
            className="logoutButton"
            draggable={false}
            onClick={[Function]}
            src="/img/logOut.svg"
            title="logOut"
          />
        </div>
      </div>
    </div>
  </header>
  <div
    className="Build"
  >
    <div
      className="sectionMode"
    >
      <button
        className="newSectionTool CompoentnsMenu_button"
        onClick={[Function]}
      >
        <span>
          New section
        </span>
      </button>
    </div>
    0
  </div>
</div>
`;

exports[`Build test 2`] = `
<div
  onTouchStart={[Function]}
  onWheel={[Function]}
>
  <header>
    <div
      className="container"
    >
      <div
        className="flex-row"
      >
        <div
          className="header__CabinetInfo"
          onClick={[Function]}
        >
          <img
            alt="icon"
            className="mainIcon"
            draggable={false}
            onClick={null}
            src="/img/logo.svg"
            title={null}
          />
          <h3
            className="tilteApp"
          >
            Constructor
          </h3>
        </div>
        <div
          className="Navigator"
        >
          <i
            className=" about fas fa-2x fa-book"
            onClick={[Function]}
            title="Guide"
          />
          <img
            alt="icon"
            className="about"
            draggable={false}
            onClick={[Function]}
            src="/img/about_logo.svg"
            title="about"
          />
          <img
            alt="icon"
            className="logoutButton"
            draggable={false}
            onClick={[Function]}
            src="/img/logOut.svg"
            title="logOut"
          />
        </div>
      </div>
    </div>
  </header>
  <div
    className="Build"
  >
    <div
      className="sectionMode"
    >
      <button
        className="newSectionTool CompoentnsMenu_button"
        onClick={[Function]}
      >
        <span>
          New section
        </span>
      </button>
    </div>
    0
  </div>
</div>
`;

exports[`Build test 3`] = `
<div
  onTouchStart={[Function]}
  onWheel={[Function]}
>
  <header>
    <div
      className="container"
    >
      <div
        className="flex-row"
      >
        <div
          className="header__CabinetInfo"
          onClick={[Function]}
        >
          <img
            alt="icon"
            className="mainIcon"
            draggable={false}
            onClick={null}
            src="/img/logo.svg"
            title={null}
          />
          <h3
            className="tilteApp"
          >
            Constructor
          </h3>
        </div>
        <div
          className="Navigator"
        >
          <i
            className=" about fas fa-2x fa-book"
            onClick={[Function]}
            title="Guide"
          />
          <img
            alt="icon"
            className="about"
            draggable={false}
            onClick={[Function]}
            src="/img/about_logo.svg"
            title="about"
          />
          <img
            alt="icon"
            className="logoutButton"
            draggable={false}
            onClick={[Function]}
            src="/img/logOut.svg"
            title="logOut"
          />
        </div>
      </div>
    </div>
  </header>
  <div
    className="Build"
  >
    <div
      className="sectionMode"
    >
      <button
        className="newSectionTool CompoentnsMenu_button"
        onClick={[Function]}
      >
        <span>
          New section
        </span>
      </button>
    </div>
    0
  </div>
</div>
`;

exports[`Build test 4`] = `
<div
  onTouchStart={[Function]}
  onWheel={[Function]}
>
  <div
    className="Build"
  >
    <div
      className="sectionMode"
    >
      <button
        className="newSectionTool CompoentnsMenu_button"
        onClick={[Function]}
      >
        <span>
          New section
        </span>
      </button>
    </div>
    0
  </div>
</div>
`;
